--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 Hello World
-<b>Doses</b>
+<br>
+<strong>Doses</strong>
+<div>
+<h2>Creating a better world can be <a herf= "http://sap.com">Challenging</a> but we will make it <a href="http://staples.com">EASIER</a>
