--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@ Hello World
 <br>
 <strong>Doses</strong>
 <div>
-<h2>Creating a better world can be <a herf= "http://sap.com">Challenging</a> but we will make it <a href="http://staples.com">EASIER</a>
+<h2>Creating a better world can be <a href= "http://www.sap.com/index.html">Challenging</a> but we will make it <a href="http://staples.com">EASIER</a>
