--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 Hello World
 <br>
-<strong>Doses</strong>
+
+<strong>Strong Change</strong>
 <div>
 <h2>Creating a better world can be <a href= "http://www.sap.com/index.html">Challenging</a> but we will make it <a href="http://staples.com">EASIER</a>
