--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </head>
   <body>
     <h1>Hello, world! The world is my oyster. Come to me now</h1>
+    <img src='resources/hanahaus.png'>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
