--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </head>
   <body>
     <h1>Hello, world! The world is my oyster. Come to me now</h1>
+
     <img src='resources/hanahaus.png'>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -34,4 +35,9 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
+  <footer>
+  	<div background-color:'yellow'>
+  		<h1>Footer</h1>
+  	</div>
+  </footer>
 </html>
