--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
     <script src="js/bootstrap.min.js"></script>
   </body>
   <footer>
-  	<div background-color:'yellow'>
-  		<h1>Footer</h1>
+  	<div style="background-color:yellow">
+  		<div style="float:left">
+  			<h1>Spread the word</h1>
+  		</div>
+  		<div>
+  			<h2>Ridiculous boxed</h2>
+  		</div>
   	</div>
   </footer>
 </html>
