--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   		<div style="float:left">
   			<h1>Spread the word</h1>
   		</div>
-  		<div>
+  		<div style="float:right">
   			<h2>Ridiculous boxed</h2>
   		</div>
   	</div>
