--- a/index.html
+++ b/index.html
@@ -35,14 +35,12 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
-  <footer>
-  	<div style="background-color:yellow">
-  		<div style="float:left">
-  			<h1>Spread the word</h1>
-  		</div>
-  		<div style="float:right">
-  			<h2>Ridiculous boxed</h2>
-  		</div>
+  <footer style="background-color:yellow">
+  	<div style="float:left">
+  		<h1>Spread the word</h1>
+  	</div>
+  	<div style="float:right">
+  		<h2>Ridiculous boxed</h2>
   	</div>
   </footer>
 </html>
