--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   	<div style="float:left">
   		<h1>Spread the word</h1>
   	</div>
-  	<div style="float:right">
+  	<div style="float:right; padding-right:40px">
   		<h2>Ridiculous boxed</h2>
   	</div>
   </footer>
