--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world! The world is my oyster. Come to me now</h1>
+    <h1>Hello, world! The world is my oyster. </h1>
 
-    <img src='resources/hanahaus.png'>
+    <img src='resources/hanahaus.png' style="width:100%">
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
