--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <script src="js/bootstrap.min.js"></script>
   </body>
   <footer style="background-color:yellow">
-  	<div style="float:left">
+  	<div style="float:left; padding-bottom:100px">
   		<h1>Spread the word</h1>
   	</div>
-  	<div style="float:right; padding-right:40px">
+  	<div style="float:right; padding-right:40px; padding-bottom:100px">
   		<h2>Ridiculous boxed</h2>
   	</div>
   </footer>
