--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world! The world is my oyster. </h1>
+    <h1>Hello, world! The world is my oyster. Mmmmm...</h1>
 
     <img src='resources/hanahaus.png' style="width:100%">
 
@@ -36,10 +36,10 @@
     <script src="js/bootstrap.min.js"></script>
   </body>
   <footer style="background-color:yellow">
-  	<div style="float:left; padding-bottom:100px">
+  	<div style="float:left; padding-bottom:100px; width:50%">
   		<h1>Spread the word</h1>
   	</div>
-  	<div style="float:right; padding-right:40px; padding-bottom:100px">
+  	<div style="float:right; padding-bottom:100px; width:50%">
   		<h2>Ridiculous boxed</h2>
   	</div>
   </footer>
