--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="js/bootstrap.min.js"></script>
   </body>
   <footer style="background-color:yellow">
-  	<div style="float:left; padding-bottom:100px; width:50%">
+  	<div style="padding-bottom:100px; width:50%">
   		<h1>Spread the word</h1>
   	</div>
   	<div style="float:right; padding-bottom:100px; width:50%">
