--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
-  <footer style="background-color:yellow">
+  <footer>
   	<div style="float:left; padding-bottom:100px; width:50%">
   		<h1>Spread the word</h1>
   	</div>
