put css style sheets in the head

--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
 <!DOCTYPE html>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.css">
-
-<!-- Optional theme -->
-<!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
- -->
-<!-- Latest compiled and minified JavaScript -->
-<!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
- -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -17,6 +8,16 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.css">
+
+    <!-- Optional theme -->
+    <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+     -->
+    <!-- Latest compiled and minified JavaScript -->
+    <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+     -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,7 +27,7 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world! The world is my oyster. Come to me now</h1>
+    <h1>Hello, world! The world is my oyster. Come to me now. Aayushya is so silly</h1>
     <img src='resources/hanahaus.png'>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
