--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world! The world is my oyster. Come to me now. Aayushya is so silly</h1>
+    <h1>Hello, world! The world is my oyster. Come to me now.</h1>
     <img src='resources/hanahaus.png' width='100%'>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
