--- a/index.html
+++ b/index.html
@@ -4,27 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>HanaHaus</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- External stylesheet -->
+    <link href="css/index.css" rel="stylesheet">
+
+    <!-- Raleway font -->
+    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.css">
 
-    <!-- Optional theme -->
-    <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-     -->
-    <!-- Latest compiled and minified JavaScript -->
-    <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-     -->
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body>
     <h1>Hello, world! The world is my oyster. Come to me now. Aayushya is so silly</h1>
@@ -34,13 +27,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <p>
+    <div id="footer" width="100%">
+      <p>SPREAD THE WORD  
+        <a id="facebook" href="http://www.facebook.com"><img src="images/facebook.png" /></a>
+        <a id="twitter" href="http://www.twitter.com"><img src="images/twitter.png" /></a>
+      </p>
+    </div>
+
   </body>
-  <footer>
-  	<div style="float:left; padding-bottom:100px; width:50%">
-  		<h1>Spread the word</h1>
-  	</div>
-  	<div style="float:right; padding-bottom:100px; width:50%">
-  		<h2>Ridiculous boxed</h2>
-  	</div>
-  </footer>
 </html>
