--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- External stylesheet -->
     <link href="css/index.css" rel="stylesheet">
 
-    <!-- Raleway font -->
-    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <!-- PT Sans Narrow font -->
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
     
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.css">
@@ -27,7 +27,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-    <p>
+
+
+    <div id="email">
+      <p>Enter your email below and get shortlisted for opening party</p>
+      <form action="">
+        <p><input id="checkbox" type="checkbox" value="Subscribe"> Subscribe to news and updates from HanaHaus</p>
+        <p><input type="text" name="Email"></p>
+        <p><input id="submit" type="submit" value="Enter"></p>
+      </form>
+    </div>
+
     <div id="footer" width="100%">
       <p>SPREAD THE WORD  
         <a id="facebook" href="http://www.facebook.com"><img src="images/facebook.png" /></a>
