--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+  <script language="javascript">
+    var http = require('http');
+    $scope.subscribe = function(){
+
+
+
+    }
+
+
+  </script>
+
+
   </head>
   <body>
     <h1>Hello, world! The world is my oyster. Come to me now.</h1>
@@ -42,5 +55,18 @@
   	<div style="float:right; padding-bottom:100px; width:50%">
   		<h2>Ridiculous boxed</h2>
   	</div>
+
+      <div style="display:table-row;">
+        <div style="display:table-cell; padding:10px 0; vertical-align:top;">
+          <form name="form" >
+            <div class="input-group">
+              <input id="email" type="email" class="form-control" placeholder="Email me" />
+              <span class="input-group-btn">
+                <button type="submit" onclick="subscribe()" class="btn btn-default">I'm curious</button>
+              </span>
+            </div>
+          </form>
+        </div>
+      </div>      
   </footer>
 </html>
