tweaking start banner

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <title>hanaHaus</title>
   <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
@@ -19,8 +20,7 @@
   
   
 </div>
-
-<div class="start" data-300="height[swing]:500px" data-800="height[swing]:678px" data-1500="height[swing]:500px">
+<div class="start" data-300="height[swing]:500px" data-800="height[swing]:678px" data-1500="height[swing]:900px">
   
 <!--   <div class="side_logo" data-0="margin-top[swing]:0px;" data-400="margin-top[swing]:-50px;" data-800="margin-top[swing]:-100px;" data-1500="margin-top[swing]:-50px">
     <p><i>HanaHaus is a public café that hopes to bestow new life to the historic New Varsity Theater by providing unique services and events for the entrepreneurial & local community.<br>One that both salutes, and tinkers with, traditional cafe culture</i></p>
@@ -43,9 +43,7 @@
   </div>
 </div>
 
-<div class="location" >
-            <a  href="https://www.google.com/maps/place/456+University+Ave,+Palo+Alto,+CA+94301/@37.4475588,-122.1595498,17z/data=!3m1!4b1!4m2!3m1!1s0x808fbb38fcfe46f1:0xffd732ead2e767f3" >456 University Ave.</a>
-</div>
+  <a class="location fa fa-map" href="https://www.google.com/maps/place/456+University+Ave,+Palo+Alto,+CA+94301/@37.4475588,-122.1595498,17z/data=!3m1!4b1!4m2!3m1!1s0x808fbb38fcfe46f1:0xffd732ead2e767f3" style="font-size:larger;">456 University Ave.</a>
 <div class="info">
   
   
