--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="js/skrollr.min.js"></script>
   <link href="css/style2.css" type="text/css" rel="stylesheet">
   <link href="css/style_before.css" type="text/css" rel="stylesheet">
+  <link href="css/style_mobile.css" type="text/css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -55,11 +56,16 @@
  -->    
     <div class="seperator" data-scroll-reveal="ease move 100px"></div>
     <div class="hollow">
-      <div class="hollow1" data-scroll-reveal="after 1.0s, enter left and move 200px and reset over .66s"><p><font-color='#231f20'>Savour</font-color><br><span> Outdoor/Indoor cafe serving world-class coffee and nourishing food service in a bistro setting. Open to all for Breakfast, lunch and dinner.</span> </p></div>
-      <div class="hollow2" data-scroll-reveal="after 1.0s, enter right and move 200px and reset over .66s"><p><font-color='#231f20'>Collaborate</font-color><br> Resources for entrepreneurs to work on innovative technology featuring a help desk dedicated to connecting entrepreneurs, specialists, designers, hackers, and investors</p></div>
-      <div class="hollow3" data-scroll-reveal="after 1.0s, enter right and move 200px and reset over .66s"><p><font-color='#231f20'>Learn</font-color><br>Lectures and teachings by experts in areas of interest to technology entrepreneurs 
+      <div class="hollow1" data-scroll-reveal="after 1.0s, enter left and move 200px and reset over .66s"><p><font color='#231f20'>Savour</font color><br><span> Outdoor/Indoor cafe serving world-class coffee and nourishing food service in a bistro setting. Open to all for Breakfast, lunch and dinner.</span> </p></div>
+      <div class="hollow2" data-scroll-reveal="after 1.0s, enter right and move 200px and reset over .66s"><p><font color='#231f20'>Collaborate</font color><br> Resources for entrepreneurs to work on innovative technology featuring a help desk dedicated to connecting entrepreneurs, specialists, designers, hackers, and investors</p></div>
+      <div class="hollow3" data-scroll-reveal="after 1.0s, enter right and move 200px and reset over .66s"><p><font color='#231f20'>Learn</font color><br>Lectures and teachings by experts in areas of interest to technology entrepreneurs 
 </p></div>
-      <div class="hollow4" data-scroll-reveal="after 1.0s, enter left and move 200px and reset over .66s"><p><font-color='#231f20'>Play</font-color><br>Music, stand-up comedy, movies and other entertainment for the local community</p></div>
+      <div class="hollow4" data-scroll-reveal="after 1.0s, enter left and move 200px and reset over .66s">
+        <p><font color='#231f20'>Play</font color>
+          <br>
+          Music, stand-up comedy, movies and other entertainment for the local community
+        </p>
+      </div>
 
 
 <!--       <img src="img/hex_hollow.png">
@@ -81,6 +87,28 @@
     
   </div>
 </div> 
+
+<div class="mobile_info">
+  <div class="mobile_dine">
+    <p><font color='#231f20'><h1>Savour</h1></font color><br><span> Outdoor/Indoor cafe serving world-class coffee and nourishing food service in a bistro setting. Open to all for Breakfast, lunch and dinner.</span> </p>  
+  </div>
+  <div class="mobile_work">
+    <p><font color='#231f20'><h1>Collaborate</h1></font color><br> Resources for entrepreneurs to work on innovative technology featuring a help desk dedicated to connecting entrepreneurs, specialists, designers, hackers, and investors</p>
+  </div>
+  <div class="mobile_learn">
+    <p><font color='#231f20'><h1>Learn</h1></font color><br>Lectures and teachings by experts in areas of interest to technology entrepreneurs 
+    </p>
+  </div>
+  <div class="mobile_play">
+    <p><font color='#231f20'><h1>Play</h1></font color>
+      <br>
+      Music, stand-up comedy, movies and other entertainment for the local community
+    </p>
+  </div>
+
+  <img width="100%" src="img/drawing.png">
+</div>
+
 <!-- <div class="seperator" data-1900="margin-top:-300px;height:800px" data-2200="margin-top:0px;height:50px"></div>-->
   <div class="seperator" data-scroll-reveal="ease move 500px"></div>
   <div class="subscribe" data-scroll-reveal="ease move 400px">
