--- a/index.html
+++ b/index.html
@@ -70,64 +70,90 @@
   <div class="subscribe" data-scroll-reveal="ease move 400px">
  <!--  <div class="subscribe" data-1700="margin-top:800px" data-2400="margin-top:0px"> -->
 
-  <!-- Begin MailChimp Signup Form -->
-  <div id="mc_embed_signup">
-  <form action="javascript:subscribe();" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <h4>Enter your email below to get shortlisted for our opening party</h4>
-  <div class="mc-field-group">
-    <input type="checkbox" id="checkbox" checked><label for="checkbox">Subscribe to our mailing list to receive emails and updates.</label><br>
-    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"><br>
-  </div>
-    <div id="mce-responses" class="clear">
-      <div class="response" id="mce-error-response" style="display:none"></div>
-      <div class="response" id="mce-success-response" style="display:none"></div>
-    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div style="position: absolute; left: -5000px;"><input type="text" name="b_baa41cbf856c248fe15631de0_70489ca485" tabindex="-1" value=""></div>
-      <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-  </form>
-  </div>
-
-
-
-
-<!--End mc_embed_signup-->
-
-<script>
-  function subscribe() {
-    var url;
-    console.log("#checkbox".checked);
-    if ("#checkbox".checked) {
-      url = "http://github.us8.list-manage.com/subscribe/post?u=baa41cbf856c248fe15631de0&amp;id=70489ca485";
-    } else {
-      url = "http://github.us8.list-manage.com/subscribe/post?u=baa41cbf856c248fe15631de0&amp;id=a66343854e";
-    }
-    return url;
-  }
-</script>
-
-</div>
-
-<div class="social" data-scroll-reveal="ease move 200px">
-<!-- <div class="social" data-2400="margin-top:300px" data-3000="margin-top:0"> -->
-  <!-- <img src="img/social.png" alt=""> -->
-  <p>SPREAD THE WORD  
-    <a id="facebook" href="http://www.facebook.com"><img src="images/facebook.png" /></a>
-    <a id="twitter" href="http://www.twitter.com"><img src="images/twitter.png" /></a>
-  </p>
-</div>
-<script src="js/script.js"></script>
-<script  type="text/javascript">
-  var s = skrollr.init({
-    forceHeight: false
-});
-</script>
-  <script src='js/scrollReveal.js-master/scrollReveal.js'></script> 
-  <script>
-
-      window.scrollReveal = new scrollReveal();
-
-
-
+<!-- Form -->
+  <h3 style="text-align:center">Enter your email below to get shortlisted for our opening party.</h3>
+  <script src="http://max.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
+  <script src="http://max.jotfor.ms/static/jotform.forms.js?3.2.3064" type="text/javascript"></script>
+  <script type="text/javascript">
+     JotForm.init();
   </script>
-</body>
-</html>
+  <link href="http://max.jotfor.ms/static/formCss.css?3.2.3064" rel="stylesheet" type="text/css" />
+  <link type="text/css" media="print" rel="stylesheet" href="http://max.jotfor.ms/css/printForm.css?3.2.3064" />
+  <style type="text/css">
+      .form-label-left{
+          width:150px !important;
+      }
+      .form-line{
+          padding-top:12px;
+          padding-bottom:12px;
+      }
+      .form-label-right{
+          width:150px !important;
+      }
+      .form-all{
+          width:690px;
+          font-family:'Verdana';
+          font-size:12px;
+      }
+      .form-radio-item label, .form-checkbox-item label, .form-grading-label, .form-header{
+          color:false;
+      }
+
+  </style>
+
+  <form class="jotform-form" action="http://submit.jotform.us/submit/42155483696161/" method="post" name="form_42155483696161" id="42155483696161" accept-charset="utf-8">
+    <input type="hidden" name="formID" value="42155483696161" />
+    <div class="form-all">
+      <ul class="form-section">
+        <li class="form-line" data-type="control_textbox" id="id_3">
+          <label class="form-label form-label-right" id="label_3" for="input_3">  </label>
+          <div id="cid_3" class="form-input">
+            <input type="text" class=" form-textbox validate[Email]" data-type="input-textbox" id="input_3" name="q3_input3" size="20" value="" />
+          </div>
+        </li>
+        <li class="form-line" data-type="control_button" id="id_4">
+          <div id="cid_4" class="form-input-wide">
+            <div style="margin-left:156px" class="form-buttons-wrapper">
+              <button id="input_4" type="submit" class="form-submit-button">
+                Enter
+              </button>
+            </div>
+          </div>
+        </li>
+        <li style="display:none">
+          Should be Empty:
+          <input type="text" name="website" value="" />
+        </li>
+      </ul>
+    </div>
+    <input type="hidden" id="simple_spc" name="simple_spc" value="42155483696161" />
+    <script type="text/javascript">
+    document.getElementById("si" + "mple" + "_spc").value = "42155483696161-42155483696161";
+    </script>
+  </form>
+
+
+  <div class="social" data-scroll-reveal="ease move 200px">
+  <!-- <div class="social" data-2400="margin-top:300px" data-3000="margin-top:0"> -->
+    <!-- <img src="img/social.png" alt=""> -->
+    <p>SPREAD THE WORD  
+      <a id="facebook" href="http://www.facebook.com"><img src="images/facebook.png" /></a>
+      <a id="twitter" href="http://www.twitter.com"><img src="images/twitter.png" /></a>
+    </p>
+  </div>
+  <script src="js/script.js"></script>
+  <script  type="text/javascript">
+    var s = skrollr.init({
+      forceHeight: false
+  });
+  </script>
+    <script src='js/scrollReveal.js-master/scrollReveal.js'></script> 
+    <script>
+
+        window.scrollReveal = new scrollReveal();
+
+
+
+    </script>
+  </body>
+  </html>
