small placement fix

--- a/index.html
+++ b/index.html
@@ -56,14 +56,16 @@
  -->    
     <div class="seperator" data-scroll-reveal="ease move 100px"></div>
     <div class="hollow">
-      <div class="hollow1" data-scroll-reveal="after 1.0s, enter left and move 200px and reset over .66s"><p><font color='#231f20'>Savour</font color><br><span> Outdoor/Indoor cafe serving world-class coffee and nourishing food service in a bistro setting. Open to all for Breakfast, lunch and dinner.</span> </p></div>
-      <div class="hollow2" data-scroll-reveal="after 1.0s, enter right and move 200px and reset over .66s"><p><font color='#231f20'>Collaborate</font color><br> Resources for entrepreneurs to work on innovative technology featuring a help desk dedicated to connecting entrepreneurs, specialists, designers, hackers, and investors</p></div>
-      <div class="hollow3" data-scroll-reveal="after 1.0s, enter right and move 200px and reset over .66s"><p><font color='#231f20'>Learn</font color><br>Lectures and teachings by experts in areas of interest to technology entrepreneurs 
+      <div class="hollow1" data-scroll-reveal="after 1.0s, enter left and move 200px and reset over .66s"><p><font color='#231f20'>Savour</font color><br><span> <font size='3'>Outdoor/Indoor cafe serving world-class coffee and nourishing food service in a bistro setting. Open to all for Breakfast, lunch and dinner.</font size></span> </p></div>
+      
+      <div class="hollow2" data-scroll-reveal="after 1.0s, enter right and move 200px and reset over .66s"><p><font color='#231f20'>Collaborate</font color><br> <font size='3'>Resources for entrepreneurs to work on innovative technology featuring a help desk dedicated to connecting entrepreneurs, specialists, designers, hackers, and investors</font size></p></div>
+     
+      <div class="hollow3" data-scroll-reveal="after 1.0s, enter right and move 200px and reset over .66s"><p><font color='#231f20'>Learn</font color><br><font size='3'>Lectures and teachings by experts in areas of interest to technology entrepreneurs </font size>
 </p></div>
       <div class="hollow4" data-scroll-reveal="after 1.0s, enter left and move 200px and reset over .66s">
         <p><font color='#231f20'>Play</font color>
           <br>
-          Music, stand-up comedy, movies and other entertainment for the local community
+          <font size='3'>Music, stand-up comedy, movies and other entertainment for the local community</font size>
         </p>
       </div>
 
