mobile font size

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 </div>
 
-  <a class="location fa fa-map-marker" href="https://www.google.com/maps/place/456+University+Ave,+Palo+Alto,+CA+94301/@37.4475588,-122.1595498,17z/data=!3m1!4b1!4m2!3m1!1s0x808fbb38fcfe46f1:0xffd732ead2e767f3" style="font-size:larger;">456 University Ave., Palo Alto</a>
+  <a class="location fa fa-map-marker" href="https://www.google.com/maps/place/456+University+Ave,+Palo+Alto,+CA+94301/@37.4475588,-122.1595498,17z/data=!3m1!4b1!4m2!3m1!1s0x808fbb38fcfe46f1:0xffd732ead2e767f3">456 University Ave., Palo Alto</a>
 <div class="info">
   
   
