--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="home">
-  <svg width="100%" height ="100%" id="svg"></svg>
+  <svg width="100%" height ="100%" id="svg" class="mobile"></svg>
   <img src="img/arrow.png"></img>
   
   
