removed skroll for testing mobile

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
 </div>
 <script src="js/script.js"></script>
 <script  type="text/javascript">
-    var s = skrollr.init({
-    forceHeight: false
-});
+//     var s = skrollr.init({
+//     forceHeight: false
+// });
 </script>
   <script src='js/scrollReveal.js-master/scrollReveal.js'></script> 
   <script>
