--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
  <!--  <div class="subscribe" data-1700="margin-top:800px" data-2400="margin-top:0px"> -->
 
 <div>
-  <p style="text-align: center">Enter your email below to get shortlisted for our opening party</p>
+  <p class="email">Enter your email below to get shortlisted for our opening party</p>
   <script type="text/javascript" src="http://form.jotform.us/jsform/42155483696161"></script>
 </div>
 
