--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>  
   <div class="side_logo_fill" data-0="margin-top[swing]:0px;" data-400="margin-top[swing]:-50px;" data-800="margin-top[swing]:-100px;" data-1500="margin-top[swing]:-50px">
     <p><font size='6'>Hana Haus</font size> <br><br>
-      <i>HanaHaus is a public café that hopes to bestow new life to the historic New Varsity Theater by providing unique services and events for the entrepreneurial & local community.<br>One that both salutes, and tinkers with, traditional cafe culture</i>
+      <i>HanaHaus is a community of purpose.<br><br>We are defining a new Café experience where creativeindividuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts</i>
     </p>
   </div>
 <div class="start" data-300="height[swing]:500px" data-800="height[swing]:678px" data-1500="height[swing]:900px">
@@ -47,7 +47,7 @@
 
   <div class="mobile_text">
     <p>      
-      <i>HanaHaus is a public café that hopes to bestow new life to the historic New Varsity Theater by providing unique services and events for the entrepreneurial & local community.One that both salutes, and tinkers with, traditional cafe culture</i>
+      <i>HanaHaus is a community of purpose.<br>We are defining a new Café experience where creativeindividuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts</i>
     </p>
 </div>
 
