form made fluid

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   <div class="subscribe" data-scroll-reveal="ease move 400px">
  <!--  <div class="subscribe" data-1700="margin-top:800px" data-2400="margin-top:0px"> -->
 
-<div>
-  <p class="email">Enter your email below to get shortlisted for our opening party</p>
+<div class="email">
+  <p>Enter your email below to get shortlisted for our opening party</p>
   <script type="text/javascript" src="http://form.jotform.us/jsform/42155483696161"></script>
 </div>
 
