--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@
 //     forceHeight: false
 // });
 </script>
+<script>
+  $(window).on('orientationchange', function(e) {
+       $.mobile.changePage(window.location.href, {
+          allowSamePageTransition: true,
+          transition: 'none',
+          reloadPage: true
+      });
+  });
+</script>
   <script src='js/scrollReveal.js-master/scrollReveal.js'></script> 
   <script>
     if (!("ontouchstart" in document.documentElement)) {
