--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     
   </div>
 </div> 
-<div class="seperator"></div>
+<div class="seperator" data-scroll-reveal="ease move 500px"></div>
 <div class="mobile drawing">
  </div>
-<div class="subscribe">
+<div class="subscribe"  data-scroll-reveal="ease move 400px">
   <form>
     <p>Enter your email below and get shortlisted to our opening party</p>
     <input type="checkbox" name="subscribe" class="css-checkbox"><label class="css-label">Subscribe to news and updates<span class="notmobile"> from HanaHaus</span> </label><br>
@@ -92,7 +92,7 @@
   
 
 </div>
-<div class="social">
+<div class="social" data-scroll-reveal="ease move 200px">
 
   <h3>Spread The Word</h3>
   <a href=""><img src="img/facebook.png" alt=""></a>
