--- a/index.html
+++ b/index.html
@@ -83,15 +83,10 @@
 <div class="mobile drawing">
  </div>
 <div class="subscribe">
-  <form>
-    <p>Enter your email below and get shortlisted to our opening party</p>
-    <input type="checkbox" name="subscribe" class="css-checkbox"><label class="css-label">Subscribe to news and updates<span class="notmobile"> from HanaHaus</span> </label><br>
-     <input type="text" name="email"><br>
-     <input type="button" value="Enter">
-  </form>
-  
-
+  <p>Enter your email below to get shortlisted for our opening party</p>
+  <script type="text/javascript" src="http://form.jotform.us/jsform/42155483696161"></script>
 </div>
+
 <div class="social">
 
   <h3>Spread The Word</h3>
