--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
 <div class="mobile drawing">
  </div>
 <div class="subscribe" data-scroll-reveal="ease move 400px">
-  <p>Enter your email below to get shortlisted for our opening party</p>
-  <script type="text/javascript" src="http://form.jotform.us/jsform/42155483696161"></script>
+  <form>
+   <p>Enter your email below to get shortlisted for our opening party</p>
+    <script type="text/javascript" src="http://form.jotform.us/jsform/42155483696161"></script>
+  </form>
 </div>
 
 <div class="social" data-scroll-reveal="ease move 200px">
