--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<div class="home">
+<!-- <div class="home">
   <svg width="100%" height ="100%" id="svg"></svg>
   <img src="img/arrow.png"></img>
   
@@ -46,7 +46,7 @@
     <img data-scroll-reveal="after 1.0s, ease-in 200px and reset over .66s" src="img/hex1.png" alt="">
     <img data-scroll-reveal="after 1.0s, ease-in 200px and reset over .66s" src="img/hex2.png" alt="">
     <img data-scroll-reveal="after 1.0s, ease-in 200px and reset over .66s" src="img/hex3.png" alt="">
-  </div>
+  </div> -->
   <div class="hexText clearfix">
     <div class="outer">
       <div class="inner">
@@ -79,7 +79,7 @@
     
   </div>
 </div> 
-<div class="seperator" data-scroll-reveal="ease move 500px"></div>
+<!-- <div class="seperator" data-scroll-reveal="ease move 500px"></div>
 <div class="mobile drawing">
  </div>
 <div class="subscribe" data-scroll-reveal="ease move 400px">
@@ -95,7 +95,7 @@
   <a href=""><img src="img/twitter.png" alt=""></a>
   
 </div>
-<script src="js/script.js"></script>
+ --><script src="js/script.js"></script>
   <script src='js/scrollReveal.js-master/scrollReveal.js'></script> 
   <script>
     if (!("ontouchstart" in document.documentElement)) {
