--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
   <script type="text/javascript" src="js/d3.v3.min.js"></script>
   <script type="text/javascript" src="js/skrollr.min.js"></script>
   <script>
-  $(window).on('orientationchange', function(e) {
-     $.mobile.changePage(window.location.href, {
-        allowSamePageTransition: true,
-        transition: 'none',
-        reloadPage: true
-    });
-});
-</script>
+  <script type="text/javascript"> // RELOADS WEBPAGE WHEN MOBILE ORIENTATION CHANGES  
+    window.onorientationchange = function() { 
+        var orientation = window.orientation; 
+            switch(orientation) { 
+                case 0: window.location.reload(); 
+                break; 
+                case 90: window.location.reload(); 
+                break; 
+                case -90: window.location.reload(); 
+                break; } 
+    };
+  </script>
   
   <link href="css/style.css" type="text/css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
