--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
  
   <script type="text/javascript" src="js/d3.v3.min.js"></script>
   <script type="text/javascript" src="js/skrollr.min.js"></script>
-  <script>
-  <script type="text/javascript"> // RELOADS WEBPAGE WHEN MOBILE ORIENTATION CHANGES  
-    window.onorientationchange = function() { 
-        var orientation = window.orientation; 
-            switch(orientation) { 
-                case 0: window.location.reload(); 
-                break; 
-                case 90: window.location.reload(); 
-                break; 
-                case -90: window.location.reload(); 
-                break; } 
-    };
-  </script>
   
   <link href="css/style.css" type="text/css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -113,5 +100,36 @@
       window.scrollReveal = new scrollReveal();
     }
   </script>
+<script>
+  $(function(){
+
+// Set Inital orientation
+// get the initial orientation from window which
+// returns 0 for portrait and 1 for landscape
+if(window.orientation == 0){
+    var ori = "portrait";
+}else{
+    var ori = "landscape";
+}
+changeOrientation(ori);
+
+// Orientation Change
+// When orientation changes event is triggered
+// exposing an orientation property of either
+// landscape or portrait
+$('body').bind('orientationchange',function(event){
+    changeOrientation(event.orientation)
+})
+
+// Change the style dependengt on orientation
+function changeOrientation(ori){
+    // Remove all classes separated by spaces
+    $("#orientation").removeClass('portrait landscape');
+    $("#orientation").addClass(ori);
+    $("#orientation").html("<p>"+ori.toUpperCase()+"</p>");
+}
+
+});
+</script>
 </body>
 </html>
