--- a/index.html
+++ b/index.html
@@ -100,36 +100,7 @@
       window.scrollReveal = new scrollReveal();
     }
   </script>
-<script>
-  $(function(){
 
-// Set Inital orientation
-// get the initial orientation from window which
-// returns 0 for portrait and 1 for landscape
-if(window.orientation == 0){
-    var ori = "portrait";
-}else{
-    var ori = "landscape";
-}
-changeOrientation(ori);
-
-// Orientation Change
-// When orientation changes event is triggered
-// exposing an orientation property of either
-// landscape or portrait
-$('body').bind('orientationchange',function(event){
-    changeOrientation(event.orientation)
-})
-
-// Change the style dependengt on orientation
-function changeOrientation(ori){
-    // Remove all classes separated by spaces
-    $("#orientation").removeClass('portrait landscape');
-    $("#orientation").addClass(ori);
-    $("#orientation").html("<p>"+ori.toUpperCase()+"</p>");
-}
-
-});
-</script>
+<script>window.onorientationchange = function() { var orientation = window.orientation; switch(orientation) { case 0: window.location.reload(); break; case 90: window.location.reload(); break; case -90: window.location.reload(); break; } }</script>
 </body>
 </html>
