--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> <!--320-->
-
   <title>hanaHaus</title>
  <link href='http://fonts.googleapis.com/css?family=Fjalla+One|Merriweather:400,400italic' rel='stylesheet' type='text/css'>
  
@@ -86,7 +84,8 @@
 <div class="subscribe" data-scroll-reveal="ease move 400px">
   <form>
    <p>Enter your email below to get shortlisted for our opening party</p>
-<script type="text/javascript" src="http://form.jotform.us/jsform/42155483696161"></script>  </form>
+  <script type="text/javascript" src="http://form.jotform.us/jsform/42155483696161"></script>
+  </form>
 </div>
 
 <div class="social" data-scroll-reveal="ease move 200px">
