--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="intro">
     <div class="introSide">
       <h2>HanaHaus</h2>
-      <p>A public café that will bestow new life to the historic New Varsity Theater by providing unique services and events for the entrepreneurial & local community. One that both salutes, and tinkers with, traditional cafe culture.
+      <p>A community of purpose.We are defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
     </p>
     </div>
   
@@ -50,7 +50,7 @@
     <div class="outer" data-scroll-reveal="after 1.0s, enter left and move 200px and reset over .66s">
       <div class="inner">
         <h3>Savor</h3>
-        <p>Outdoor/Indoor cafe serving world-class coffee and nourishing food service in a bistro setting. Open to all for Breakfast, lunch and dinner</p>
+        <p>Outdoor/Indoor cafe serving world-class coffee and nourishing food service in a bistro setting. Open to all for breakfast, lunch and dinner</p>
       </div>
     </div>
     <div class="outer" data-scroll-reveal="after 1.0s, enter right and move 200px and reset over .66s">
