text change for mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </div>
 <div class="introText mobile">
-  <p>A public café that will bestow new life to the historic New Varsity Theater by providing unique services and events for the entrepreneurial & local community. One that both salutes, and tinkers with, traditional cafe culture.
+  <p>A community of purpose.We are defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
   </p>
 </div>
 <div class="location">
