form resize only for mobile, all else perfect

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 <div class="subscribe" data-scroll-reveal="ease move 400px">
   <form>
    <p>Enter your email below to get shortlisted for our opening party</p>
-<script type="text/javascript" src="http://form.jotform.us/jsform/42155483696161"></script>  </form>
-</div>
+<script type="text/javascript" src="http://form.jotform.us/jsform/42155483696161"></script></div>
 
 <div class="social" data-scroll-reveal="ease move 200px">
   <h3>Spread The Word</h3>
