--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
 <div class="social" data-scroll-reveal="ease move 200px">
   <h3>Spread The Word</h3>
-  <a href=""><img src="img/facebook.png" alt="">https://www.facebook.com/hanahaus</a>
-  <a href=""><img src="img/twitter.png" alt="">https://twitter.com/HanaHausBayArea</a>
+  <a href="https://www.facebook.com/hanahaus"><img src="img/facebook.png" alt=""></a>
+  <a href="https://twitter.com/HanaHausBayArea"><img src="img/twitter.png" alt=""></a>
   
 </div>
 
